--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-    "ownerNumber": ["6289517185039@s.whatsapp.net","6289517185039@s.whatsapp.net"],
-    "ownerName": "Call Me Zaa🐧",
-    "instagram" : "https://instagram.com/nicetry.zaa._",
-    "botName": "Pizzaa🐧-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "ownerNumber": ["01672945593@s.whatsapp.net"],
+    "ownerName": "Its a me nity",
+    "instagram" : "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+    "botName": "TickBot ",
+    "footer": "TickBot ",
     "sessionName": "session",
-    "fotoDonasi": "./qris.jpg",
-    "pathimg": "./Haruka.jpg",
+    "fotoDonasi": "./acezio.jpg",
+    "pathimg": "./acezio.jpg",
     "BotKey": "VdFlEL76",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
