--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber": ["01672945593@s.whatsapp.net"],
-    "ownerName": "Its a me nity",
+    "ownerNumber": ["+60162275593@s.whatsapp.net"],
+    "ownerName": "nity",
     "instagram" : "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
     "botName": "TickBot ",
     "footer": "TickBot ",
